--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
+<html> 
+  <head
+   <title> This is a my website</title>     
+  </head>
  <body>
    <h1>Hello World!</h1>
-  </body>
+  <a hred= "sky.jpg"><img src = "sky.jpg" alt= "cute photo of cat" height= "10%'></a>
+ </body>
 </html>
