--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
  <body>
    <h1>Hello World!</h1>
-  <a hred= "sdc.jpg"><img src = "sdc.jpg" alt= "cute photo of cat" height= "100%'></a>
+  <a hred= "sdc.jpg"><img src = "sdc.jpg" alt= "cute photo of dog" height= "100%'></a>
  </body>
 </html>
