--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
  <body>
    <h1>Hello World!</h1>
-  <a href= "sdc.jpg"><img src = "sdc.jpg" alt= "photo of dog" height= "10%'></a>
+  <a href= "sdc.jpg"><img src = "sdc.jpg" alt= "side eye dog" height= "10%'></a>
  </body>
 </html>
