--- a/index.html
+++ b/index.html
@@ -7,3 +7,10 @@
   <a href= "sdc.jpg"><img src = "sdc.jpg" alt= "side eye dog" height= "10%'></a>
  </body>
 </html>
+ 
+    <ul>
+<li>This is an unordered list</li>
+<li>The <code>li</code> tags come between two <code>ul</code> tags
+</ul>
+
+
