--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
   <a href= "sdc.jpg"><img src = "sdc.jpg" alt= "side eye dog" height= "10%'></a>
  </body>
 </html>
- <ul>
-  <li>Cookies</li>
+
+    <html>
+<body>
+
+<h2>Ordered List with Numbers</h2>
+
+<ol type="1">
+  <li>Bowls</li>
+  <li>Cerealn</li>
   <li>Milk</li>
-  <li>Napkin</li>
-</ul>
+</ol>  
+
+</body>
+</html>
